[package]
name = "d88dmp"
version = "0.14.0"
authors = ["ORYZAPAO <oryzapao@gmail.com>"]
edition = "2018"
repository = "https://github.com/ORYZAPAO/d88dmp"
documentation = "https://docs.rs/d88dmp"
keywords = [
         "d88",
         "dump",
         "retropc",
         "terminal"
]
license = "MIT"
readme = "README.md"
description = "*.D88 file dump tool."


[dependencies]
libc = "0.2"
clap = "3.0.13"
ansi_term = "0.12.1"

D88FileIO = { version="0.0.8", path="../crates/D88FileIO" }
